@@ -13,11 +13,9 @@ import net.hypnoz.core.repository.ModulesRepository;
 import net.hypnoz.core.utils.FormatText;
 import net.hypnoz.core.utils.RequesteResponsheandler.RequestErrorEnum;
 import net.hypnoz.core.utils.exceptions.ResponseException;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
 import org.springframework.data.rest.webmvc.ResourceNotFoundException;
 import org.springframework.stereotype.Service;
 
@@ -25,7 +23,6 @@ import javax.transaction.Transactional;
 import java.io.IOException;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -35,8 +32,8 @@ public class ApplicationsService {
     private final ApplicationsMapper applicationsMapper;
     private final ModulesRepository modulesRepository;
 
-    /*@Value("${application-url}")
-    private String applicationUrl;*/
+    @Value("${application-url}")
+    private String applicationUrl;
     public ApplicationsService(ApplicationsRepository repository, ApplicationsMapper applicationsMapper, ModulesRepository modulesRepository) {
         this.repository = repository;
         this.applicationsMapper = applicationsMapper;
@@ -72,20 +69,20 @@ public class ApplicationsService {
             ObjectMapper objectMapper = new ObjectMapper();
             TypeReference<List<ApplicationsDto>> typeReference = new TypeReference<List<ApplicationsDto>>(){};
             List<ApplicationsDto> o = objectMapper.readValue(resource.getInputStream(),typeReference);
-            return o.stream().filter(p-> Objects.equals(p.getModule(), modules.getCode())).map(_l->{
+            return o.stream().filter(p-> Objects.equals(p.getModule(), modules.getCode())).map(applicationsDto->{
                 Applications app = null;
-                if(repository.findByCodeAndModule(_l.getCode(),_l.getModule()).isEmpty()){
-                    app = applicationsMapper.toEntity(_l);
+                if(repository.findByCodeAndModule(applicationsDto.getCode(),applicationsDto.getModule()).isEmpty()){
+                    app = applicationsMapper.toEntity(applicationsDto);
                     app.setModule(modules.getCode());
                     app.setModulesId(mod.getId());
-                    app.setLibCode(FormatText.formatCode(_l.getLibCode()));
-                    app.setOrdre(FormatText.getOrdre(_l.getCode()));
+                    app.setLibCode(FormatText.formatCode(applicationsDto.getLibCode()));
+                    app.setOrdre(FormatText.getOrdre(applicationsDto.getCode()));
                     repository.saveAndFlush(app);
                 }else{
-                    app =repository.findByCodeAndModule(_l.getCode(),_l.getModule()).orElse(null);
+                    app =repository.findByCodeAndModule(applicationsDto.getCode(),applicationsDto.getModule()).orElse(null);
                 }
                 return applicationsMapper.toDto(app);
-            }).collect(Collectors.toList());
+            }).toList();
         } catch (IOException e) {
             throw new ResponseException(RequestErrorEnum.ERROR_INSERT_OR_UPDATE_IN_DATABASE);
         }
